test/fail/simple_partial_index09b.v3
//@seman
class A {
	def [x: int] => 134;
}
def a: A = A.new();
def f: int -> int = a[_];
